[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
bytes = "1.3.0"
clap = { version = "4.1.1", features = ["derive"] }
nom = "7.1.3"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[[bin]]
name = "protohackr"
path = "./src/main.rs"

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
